<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icast_interfaces</name>
  <version>0.0.0</version>
  <description>icast_interfaces</description>
  <maintainer email="pandustantra@gmail.com">Pandu Surya Tantra</maintainer>
  <maintainer email="azzamwildan462@gmail.com">Azzam Wildan Maulana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>