<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icast_server</name>
  <version>0.0.0</version>
  <description>icast_server</description>
  <maintainer email="pandustantra@gmail.com">Pandu Surya Tantra</maintainer>
  <maintainer email="azzamwildan462@gmail.com">Azzam Wildan Maulana</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>icast_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>